--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jsdom": "^27.4.0",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.7.4",
+    "supabase": "^2.72.3",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "vite": "^7.3.0",
